2014-07-29  Tom Tromey  <tromey@redhat.com>

	* corelow.c (struct core_target_ops_with_data): New struct.
	(core_vec, core_gdbarch, core_data): Remove.  Now fields of
	core_target_ops_with_data.
	(sniff_core_bfd): Add core_gdbarch parameter.
	(get_core_target_ops): New function.
	(core_xclose): Rename from core_close.  Update for
	core_target_ops_with_data.  Free the target.
	(core_close_cleanup): Rename parameter.  Update.
	(core_open): Use TARGET_NEW.  Update.
	(get_core_register_section, get_core_registers, core_files_info)
	(core_xfer_partial, core_read_description, core_pid_to_str): Use
	get_core_target_ops.  Update.
	(init_core_ops): Set to_xclose, not to_close.
	* target.c (allocate_target): New function.
	* target.h (allocate_target): Declare.
	(TARGET_NEW): New macro.

2014-07-29  Tom Tromey  <tromey@redhat.com>

	* bfd-target.c (target_bfd_reopen): Set to_identity.
	* target.c (complete_target_initialization): Set to_identity.
	(unpush_target): Check to_identity.  Call target_close on the real
	target.
	(target_is_pushed): Check to_identity.
	* target.h (struct target_ops) <to_identity>: New field.

2014-07-29  Tom Tromey  <tromey@redhat.com>

	* corefile.c (core_bfd): Remove.
	* gdbcore.h (core_bfd): Now a macro.
	* progspace.h (struct program_space) <cbfd>: New field.

2014-08-07  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* ia64-linux-tdep.c: Include "regset.h".
	(ia64_linux_gregmap, ia64_linux_fpregmap): New register maps.
	(IA64_LINUX_GREGS_SIZE, IA64_LINUX_FPREGS_SIZE): New macros.
	(ia64_linux_supply_fpregset): New function.
	(ia64_linux_gregset, ia64_linux_fpregset): New regsets.
	(ia64_linux_regset_from_core_section): New function.
	(ia64_linux_init_abi): Set regset_from_core_section gdbarch
	method.

2014-08-07  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* m68klinux-tdep.c: Include "regset.h".
	(m68k_linux_gregmap, m68k_linux_fpregmap): New register maps.
	(M68K_LINUX_GREGS_SIZE, M68K_LINUX_FPREGS_SIZE): New macros.